--- a/kod-html/Omoss/visiontest2.html
+++ b/kod-html/Omoss/visiontest2.html
@@ -5,22 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="/kod-css/visiontest2.css">
+    <link rel="stylesheet" href="/kod-css/golfklubb-style.css>
 </head>
 <body>
+   <!-- Adinas nav del -->
+
+
     <div class="top-nav">
         <ul class="menu">
-            <li><a href="/kod-html/hem/golfklubb.html">Hem</a></li>
+            <li><a href="/kod-html/hem/index.html">Hem</a></li>
 
-            <li><a href="#">Spela golf</a>
+            <li><a href="/kod-html/spela-golf/gast.html">Spela golf</a>
                 <ul class="dropdown-spela">
-                    <li><a href="#">Företag</a></li>
-                    <li><a href="#">Gäst</a></li>
-                    <li><a href="#">Tävlingar/<br>Evenemang</a></li>
+                    <li><a href="/kod-html/spela-golf/foretag.html">Företag</a></li>
+                    <li><a href="/kod-html/spela-golf/gast.html">Gäst</a></li>
+                     <li><a href="/kod-html/spela-golf/grenfee-regler.html">Greenfee & Regler</a></li>
+                    <li><a href="/kod-html/spela-golf/tavlingar-evenemang/tavlingar-evenemang.html">Tävlingar/<br>Evenemang</a></li>
                 </ul>
             </li>
 
             <li><a href="/kod-html/Omoss/omoss.html">Om oss</a>
                 <ul class="dropdown">
+                    <li><a href="/kod-html/Omoss/visiontest2.html">Historia och vision</a></li>
                     <li><a href="/kod-html/Omoss/banorna.html">Våra banor</a></li>
                     <li><a href="/kod-html/Omoss/faciliteter.html">Faciliteter</a></li>
                     <li><a href="/kod-html/medlem/medlem.html">Medlem</a></li>
@@ -33,14 +39,60 @@
                     <li><a href="/kod-html/medlem/medlem.html">Logga in</a></li>
                     <li><a href="/kod-html/medlem/createnewmember.html">Bli medlem</a></li>
                     <li><a href="/kod-html/medlem/medlem.html">Förmåner</a></li>
-                    <li><a href="#">Bokning</a></li>
+                    <li><a href="/kod-html/medlem/bokning.html">Bokning</a></li>
+                    <li><a href="/kod-html/medlem/createnewmember.html">Förmåner</a></li>
+                    <li><a href="/kod-html/medlem/bokning-medlem.html">Bokning</a></li>
+
                 </ul>
             </li>
 
             <li><a href="/kod-html/kontakt/kontakt.html">Kontakt</a></li>
-            <li><a href="/kod-html/restaurang/restaurang.html" target="_blank">Restaurang | Shop</a></li>
+
+            <li><a href="/kod-html/restaurang.html" target="_blank">Restaurang</a></li>
+
+         
+
+            <li><a href="/kod-html/shop-index.html" target="_blank">Shop</a></li>
         </ul>
+
+ <!-- Hamburgermeny för mindre skärmar -->
+<div class="hamburger-menu">
+            <input type="checkbox" id="menu-toggle" class="menu-toggle">
+            <label for="menu-toggle" class="hamburger-icon">&#9776;</label>
+            <ul class="hamburger-dropdown">
+                <li><a href="/kod-html/hem/index.html">Hem</a></li>
+                <li><a href="/kod-html/spela-golf/gast.html">Spela golf</a>
+                    <ul class="dropdown-spela">
+                        <li><a href="/kod-html/spela-golf/foretag.html">Företag</a></li>
+                        <li><a href="/kod-html/spela-golf/gast.html">Gäst</a></li>
+                        <li><a href="/kod-html/spela-golf/grenfee-regler.html">Greenfee & Regler</a></li>
+                        <li id="four"><a href="/kod-html/spela-golf/tavlingar-evenemang/tavlingar-evenemang.html">Tävlingar/Evenemang</a></li>
+                    </ul>
+                </li>
+                <li><a href="/kod-html/Omoss/omoss.html">Om oss</a>
+                    <ul class="dropdown">
+                        <li><a href="/kod-html/Omoss/visiontest2.html">Historia och vision</a></li>
+                        <li><a href="/kod-html/Omoss/banorna.html">Våra banor</a></li>
+                        <li><a href="/kod-html/Omoss/faciliteter.html">Faciliteter</a></li>
+                        <li><a href="/kod-html/medlem/medlem.html">Medlem</a></li>
+                        <li><a href="/kod-html/Omoss/nyheter.html">Nyheter</a></li>
+                    </ul>
+                </li>
+                <li><a href="/kod-html/medlem/medlem.html">Medlem</a>
+                    <ul class="dropdown-medlem">
+                        <li><a href="/kod-html/medlem/medlem.html">Logga in</a></li>
+                        <li><a href="/kod-html/medlem/createnewmember.html">Bli medlem</a></li>
+                        <li><a href="/kod-html/medlem/medlem.html">Förmåner</a></li>
+                        <li><a href="/kod-html/medlem/bokning.html">Bokning</a></li>
+                    </ul>
+                </li>
+                <li><a href="/kod-html/kontakt/kontakt.html">Kontakt</a></li>
+                <li><a href="/kod-html/restaurang.html" target="_blank">Restaurang</a></li>
+                <li><a href="/kod-html/shop-index.html" target="_blank">Shop</a></li>
+            </ul>
+        </div>
     </div>
+   <!-- Adinas nav del slut -->
      <div class="wrapper">
 <div class="background-div2">
     
