--- a/kod-html/Omoss/nyheter.html
+++ b/kod-html/Omoss/nyheter.html
@@ -10,14 +10,14 @@
 </head>
 
 <body>
-      <!-- Adinas nav del -->
+   <!-- Adinas nav del -->
 
 
-      <div class="top-nav">
+    <div class="top-nav">
         <ul class="menu">
             <li><a href="/kod-html/hem/index.html">Hem</a></li>
 
-            <li><a href="#">Spela golf</a>
+            <li><a href="/kod-html/spela-golf/gast.html">Spela golf</a>
                 <ul class="dropdown-spela">
                     <li><a href="/kod-html/spela-golf/foretag.html">Företag</a></li>
                     <li><a href="/kod-html/spela-golf/gast.html">Gäst</a></li>
@@ -26,7 +26,7 @@
                 </ul>
             </li>
 
-            <li><a href="#">Om oss</a>
+            <li><a href="/kod-html/Omoss/omoss.html">Om oss</a>
                 <ul class="dropdown">
                     <li><a href="/kod-html/Omoss/visiontest2.html">Historia och vision</a></li>
                     <li><a href="/kod-html/Omoss/banorna.html">Våra banor</a></li>
@@ -36,7 +36,7 @@
                 </ul>
             </li>
 
-            <li><a href="#">Medlem</a>
+            <li><a href="/kod-html/medlem/medlem.html">Medlem</a>
                 <ul class="dropdown-medlem">
                     <li><a href="/kod-html/medlem/medlem.html">Logga in</a></li>
                     <li><a href="/kod-html/medlem/createnewmember.html">Bli medlem</a></li>
@@ -50,11 +50,11 @@
 
             <li><a href="/kod-html/kontakt/kontakt.html">Kontakt</a></li>
 
-            <li><a href="/kod-html/restaurang.html">Restaurang</a></li>
+            <li><a href="/kod-html/restaurang.html" target="_blank">Restaurang</a></li>
 
          
 
-            <li><a href="/kod-html/shop-index.html">Shop</a></li>
+            <li><a href="/kod-html/shop-index.html" target="_blank">Shop</a></li>
         </ul>
 
  <!-- Hamburgermeny för mindre skärmar -->
@@ -63,7 +63,7 @@
             <label for="menu-toggle" class="hamburger-icon">&#9776;</label>
             <ul class="hamburger-dropdown">
                 <li><a href="/kod-html/hem/index.html">Hem</a></li>
-                <li><a href="#">Spela golf</a>
+                <li><a href="/kod-html/spela-golf/gast.html">Spela golf</a>
                     <ul class="dropdown-spela">
                         <li><a href="/kod-html/spela-golf/foretag.html">Företag</a></li>
                         <li><a href="/kod-html/spela-golf/gast.html">Gäst</a></li>
@@ -71,7 +71,7 @@
                         <li id="four"><a href="/kod-html/spela-golf/tavlingar-evenemang/tavlingar-evenemang.html">Tävlingar/Evenemang</a></li>
                     </ul>
                 </li>
-                <li><a href="#">Om oss</a>
+                <li><a href="/kod-html/Omoss/omoss.html">Om oss</a>
                     <ul class="dropdown">
                         <li><a href="/kod-html/Omoss/visiontest2.html">Historia och vision</a></li>
                         <li><a href="/kod-html/Omoss/banorna.html">Våra banor</a></li>
@@ -80,7 +80,7 @@
                         <li><a href="/kod-html/Omoss/nyheter.html">Nyheter</a></li>
                     </ul>
                 </li>
-                <li><a href="#">Medlem</a>
+                <li><a href="/kod-html/medlem/medlem.html">Medlem</a>
                     <ul class="dropdown-medlem">
                         <li><a href="/kod-html/medlem/medlem.html">Logga in</a></li>
                         <li><a href="/kod-html/medlem/createnewmember.html">Bli medlem</a></li>
@@ -89,13 +89,12 @@
                     </ul>
                 </li>
                 <li><a href="/kod-html/kontakt/kontakt.html">Kontakt</a></li>
-                <li><a href="/kod-html/restaurang.html">Restaurang</a></li>
-                <li><a href="/kod-html/shop-index.html">Shop</a></li>
+                <li><a href="/kod-html/restaurang.html" target="_blank">Restaurang</a></li>
+                <li><a href="/kod-html/shop-index.html" target="_blank">Shop</a></li>
             </ul>
         </div>
     </div>
    <!-- Adinas nav del slut -->
-
     <div>
         <header class="header-picture">
         </header>
