--- a/kod-html/kontakt/kontakt.html
+++ b/kod-html/kontakt/kontakt.html
@@ -10,7 +10,6 @@
 </head>
 
 <body>
-
    <!-- Adinas nav del -->
 
 
@@ -18,7 +17,7 @@
         <ul class="menu">
             <li><a href="/kod-html/hem/index.html">Hem</a></li>
 
-            <li><a href="#">Spela golf</a>
+            <li><a href="/kod-html/spela-golf/gast.html">Spela golf</a>
                 <ul class="dropdown-spela">
                     <li><a href="/kod-html/spela-golf/foretag.html">Företag</a></li>
                     <li><a href="/kod-html/spela-golf/gast.html">Gäst</a></li>
@@ -27,7 +26,7 @@
                 </ul>
             </li>
 
-            <li><a href="#">Om oss</a>
+            <li><a href="/kod-html/Omoss/omoss.html">Om oss</a>
                 <ul class="dropdown">
                     <li><a href="/kod-html/Omoss/visiontest2.html">Historia och vision</a></li>
                     <li><a href="/kod-html/Omoss/banorna.html">Våra banor</a></li>
@@ -37,7 +36,7 @@
                 </ul>
             </li>
 
-            <li><a href="#">Medlem</a>
+            <li><a href="/kod-html/medlem/medlem.html">Medlem</a>
                 <ul class="dropdown-medlem">
                     <li><a href="/kod-html/medlem/medlem.html">Logga in</a></li>
                     <li><a href="/kod-html/medlem/createnewmember.html">Bli medlem</a></li>
@@ -51,11 +50,11 @@
 
             <li><a href="/kod-html/kontakt/kontakt.html">Kontakt</a></li>
 
-            <li><a href="/kod-html/restaurang.html">Restaurang</a></li>
+            <li><a href="/kod-html/restaurang.html" target="_blank">Restaurang</a></li>
 
          
 
-            <li><a href="/kod-html/shop-index.html">Shop</a></li>
+            <li><a href="/kod-html/shop-index.html" target="_blank">Shop</a></li>
         </ul>
 
  <!-- Hamburgermeny för mindre skärmar -->
@@ -64,7 +63,7 @@
             <label for="menu-toggle" class="hamburger-icon">&#9776;</label>
             <ul class="hamburger-dropdown">
                 <li><a href="/kod-html/hem/index.html">Hem</a></li>
-                <li><a href="#">Spela golf</a>
+                <li><a href="/kod-html/spela-golf/gast.html">Spela golf</a>
                     <ul class="dropdown-spela">
                         <li><a href="/kod-html/spela-golf/foretag.html">Företag</a></li>
                         <li><a href="/kod-html/spela-golf/gast.html">Gäst</a></li>
@@ -72,7 +71,7 @@
                         <li id="four"><a href="/kod-html/spela-golf/tavlingar-evenemang/tavlingar-evenemang.html">Tävlingar/Evenemang</a></li>
                     </ul>
                 </li>
-                <li><a href="#">Om oss</a>
+                <li><a href="/kod-html/Omoss/omoss.html">Om oss</a>
                     <ul class="dropdown">
                         <li><a href="/kod-html/Omoss/visiontest2.html">Historia och vision</a></li>
                         <li><a href="/kod-html/Omoss/banorna.html">Våra banor</a></li>
@@ -81,7 +80,7 @@
                         <li><a href="/kod-html/Omoss/nyheter.html">Nyheter</a></li>
                     </ul>
                 </li>
-                <li><a href="#">Medlem</a>
+                <li><a href="/kod-html/medlem/medlem.html">Medlem</a>
                     <ul class="dropdown-medlem">
                         <li><a href="/kod-html/medlem/medlem.html">Logga in</a></li>
                         <li><a href="/kod-html/medlem/createnewmember.html">Bli medlem</a></li>
@@ -90,8 +89,8 @@
                     </ul>
                 </li>
                 <li><a href="/kod-html/kontakt/kontakt.html">Kontakt</a></li>
-                <li><a href="/kod-html/restaurang.html">Restaurang</a></li>
-                <li><a href="/kod-html/shop-index.html">Shop</a></li>
+                <li><a href="/kod-html/restaurang.html" target="_blank">Restaurang</a></li>
+                <li><a href="/kod-html/shop-index.html" target="_blank">Shop</a></li>
             </ul>
         </div>
     </div>
