--- a/kod-html/spela-golf/tavlingar-evenemang/tavlingar-evenemang.html
+++ b/kod-html/spela-golf/tavlingar-evenemang/tavlingar-evenemang.html
@@ -10,69 +10,23 @@
 </head>
 
 <body>
+   <!-- Adinas nav del -->
 
-  <!-- Adinas nav del -->
 
-
-  <div class="top-nav">
-    <ul class="menu">
-        <li><a href="/kod-html/hem/index.html">Hem</a></li>
-
-        <li><a href="#">Spela golf</a>
-            <ul class="dropdown-spela">
-                <li><a href="/kod-html/spela-golf/foretag.html">Företag</a></li>
-                <li><a href="/kod-html/spela-golf/gast.html">Gäst</a></li>
-                 <li><a href="/kod-html/spela-golf/grenfee-regler.html">Greenfee & Regler</a></li>
-                <li><a href="/kod-html/spela-golf/tavlingar-evenemang/tavlingar-evenemang.html">Tävlingar/<br>Evenemang</a></li>
-            </ul>
-        </li>
-
-        <li><a href="#">Om oss</a>
-            <ul class="dropdown">
-                <li><a href="/kod-html/Omoss/visiontest2.html">Historia och vision</a></li>
-                <li><a href="/kod-html/Omoss/banorna.html">Våra banor</a></li>
-                <li><a href="/kod-html/Omoss/faciliteter.html">Faciliteter</a></li>
-                <li><a href="/kod-html/medlem/medlem.html">Medlem</a></li>
-                <li><a href="/kod-html/Omoss/nyheter.html">Nyheter</a></li>
-            </ul>
-        </li>
-
-        <li><a href="#">Medlem</a>
-            <ul class="dropdown-medlem">
-                <li><a href="/kod-html/medlem/medlem.html">Logga in</a></li>
-                <li><a href="/kod-html/medlem/createnewmember.html">Bli medlem</a></li>
-                <li><a href="/kod-html/medlem/medlem.html">Förmåner</a></li>
-                <li><a href="/kod-html/medlem/bokning.html">Bokning</a></li>
-                <li><a href="/kod-html/medlem/createnewmember.html">Förmåner</a></li>
-                <li><a href="/kod-html/medlem/bokning-medlem.html">Bokning</a></li>
-
-            </ul>
-        </li>
-
-        <li><a href="/kod-html/kontakt/kontakt.html">Kontakt</a></li>
-
-        <li><a href="/kod-html/restaurang.html">Restaurang</a></li>
-
-     
-
-        <li><a href="/kod-html/shop-index.html">Shop</a></li>
-    </ul>
-
-<!-- Hamburgermeny för mindre skärmar -->
-<div class="hamburger-menu">
-        <input type="checkbox" id="menu-toggle" class="menu-toggle">
-        <label for="menu-toggle" class="hamburger-icon">&#9776;</label>
-        <ul class="hamburger-dropdown">
+    <div class="top-nav">
+        <ul class="menu">
             <li><a href="/kod-html/hem/index.html">Hem</a></li>
-            <li><a href="#">Spela golf</a>
+
+            <li><a href="/kod-html/spela-golf/gast.html">Spela golf</a>
                 <ul class="dropdown-spela">
                     <li><a href="/kod-html/spela-golf/foretag.html">Företag</a></li>
                     <li><a href="/kod-html/spela-golf/gast.html">Gäst</a></li>
-                    <li><a href="/kod-html/spela-golf/grenfee-regler.html">Greenfee & Regler</a></li>
-                    <li id="four"><a href="/kod-html/spela-golf/tavlingar-evenemang/tavlingar-evenemang.html">Tävlingar/Evenemang</a></li>
+                     <li><a href="/kod-html/spela-golf/grenfee-regler.html">Greenfee & Regler</a></li>
+                    <li><a href="/kod-html/spela-golf/tavlingar-evenemang/tavlingar-evenemang.html">Tävlingar/<br>Evenemang</a></li>
                 </ul>
             </li>
-            <li><a href="#">Om oss</a>
+
+            <li><a href="/kod-html/Omoss/omoss.html">Om oss</a>
                 <ul class="dropdown">
                     <li><a href="/kod-html/Omoss/visiontest2.html">Historia och vision</a></li>
                     <li><a href="/kod-html/Omoss/banorna.html">Våra banor</a></li>
@@ -81,21 +35,66 @@
                     <li><a href="/kod-html/Omoss/nyheter.html">Nyheter</a></li>
                 </ul>
             </li>
-            <li><a href="#">Medlem</a>
+
+            <li><a href="/kod-html/medlem/medlem.html">Medlem</a>
                 <ul class="dropdown-medlem">
                     <li><a href="/kod-html/medlem/medlem.html">Logga in</a></li>
                     <li><a href="/kod-html/medlem/createnewmember.html">Bli medlem</a></li>
                     <li><a href="/kod-html/medlem/medlem.html">Förmåner</a></li>
                     <li><a href="/kod-html/medlem/bokning.html">Bokning</a></li>
+                    <li><a href="/kod-html/medlem/createnewmember.html">Förmåner</a></li>
+                    <li><a href="/kod-html/medlem/bokning-medlem.html">Bokning</a></li>
+
                 </ul>
             </li>
+
             <li><a href="/kod-html/kontakt/kontakt.html">Kontakt</a></li>
-            <li><a href="/kod-html/restaurang.html">Restaurang</a></li>
-            <li><a href="/kod-html/shop-index.html">Shop</a></li>
+
+            <li><a href="/kod-html/restaurang.html" target="_blank">Restaurang</a></li>
+
+         
+
+            <li><a href="/kod-html/shop-index.html" target="_blank">Shop</a></li>
         </ul>
+
+ <!-- Hamburgermeny för mindre skärmar -->
+<div class="hamburger-menu">
+            <input type="checkbox" id="menu-toggle" class="menu-toggle">
+            <label for="menu-toggle" class="hamburger-icon">&#9776;</label>
+            <ul class="hamburger-dropdown">
+                <li><a href="/kod-html/hem/index.html">Hem</a></li>
+                <li><a href="/kod-html/spela-golf/gast.html">Spela golf</a>
+                    <ul class="dropdown-spela">
+                        <li><a href="/kod-html/spela-golf/foretag.html">Företag</a></li>
+                        <li><a href="/kod-html/spela-golf/gast.html">Gäst</a></li>
+                        <li><a href="/kod-html/spela-golf/grenfee-regler.html">Greenfee & Regler</a></li>
+                        <li id="four"><a href="/kod-html/spela-golf/tavlingar-evenemang/tavlingar-evenemang.html">Tävlingar/Evenemang</a></li>
+                    </ul>
+                </li>
+                <li><a href="/kod-html/Omoss/omoss.html">Om oss</a>
+                    <ul class="dropdown">
+                        <li><a href="/kod-html/Omoss/visiontest2.html">Historia och vision</a></li>
+                        <li><a href="/kod-html/Omoss/banorna.html">Våra banor</a></li>
+                        <li><a href="/kod-html/Omoss/faciliteter.html">Faciliteter</a></li>
+                        <li><a href="/kod-html/medlem/medlem.html">Medlem</a></li>
+                        <li><a href="/kod-html/Omoss/nyheter.html">Nyheter</a></li>
+                    </ul>
+                </li>
+                <li><a href="/kod-html/medlem/medlem.html">Medlem</a>
+                    <ul class="dropdown-medlem">
+                        <li><a href="/kod-html/medlem/medlem.html">Logga in</a></li>
+                        <li><a href="/kod-html/medlem/createnewmember.html">Bli medlem</a></li>
+                        <li><a href="/kod-html/medlem/medlem.html">Förmåner</a></li>
+                        <li><a href="/kod-html/medlem/bokning.html">Bokning</a></li>
+                    </ul>
+                </li>
+                <li><a href="/kod-html/kontakt/kontakt.html">Kontakt</a></li>
+                <li><a href="/kod-html/restaurang.html" target="_blank">Restaurang</a></li>
+                <li><a href="/kod-html/shop-index.html" target="_blank">Shop</a></li>
+            </ul>
+        </div>
     </div>
-</div>
-<!-- Adinas nav del slut -->
+   <!-- Adinas nav del slut -->
 
   <!--Start Geneskod: Tävlingar och Evenemang -->
   <!--Header-->
