--- a/kod-html/Omoss/visiontest2.html
+++ b/kod-html/Omoss/visiontest2.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="/kod-css/visiontest2.css">
-    <link rel="stylesheet" href="/kod-css/golfklubb-style.css>
+    <link rel="stylesheet" href="/kod-css/golfklubb-style.css">
 </head>
 <body>
    <!-- Adinas nav del -->
