--- a/kod-html/Omoss/faciliteter.html
+++ b/kod-html/Omoss/faciliteter.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Om oss</title>
     <link rel="stylesheet" href="/kod-css/omoss.css">
-    <link rel="stylesheet" href="/kod-css/golfklubb-style.css>
+    <link rel="stylesheet" href="/kod-css/golfklubb-style.css">
 </head>
 <body>
     <!-- Adinas nav del -->
