--- a/kod-html/Omoss/faciliteter.html
+++ b/kod-html/Omoss/faciliteter.html
@@ -138,16 +138,17 @@
                 </p>
             </div>
         </div>
-        <div class="facilitet1">
-                <img src="#" class="bild-fac" alt="våra övernattningsstugor">
-            <div class="text1">
-                <p>
-                Våra övernattningsstugor på golfklubben ger dig möjlighet att förlänga din golfupplevelse i en lugn och naturskön miljö. Med moderna bekvämligheter, sköna sängar och en trivsam atmosfär är stugorna det perfekta valet för dig som vill koppla av efter en dag på banan. Vakna upp till fågelkvitter och en ny runda golf bara några steg från din dörr. Med närhet till klubbhuset,<a href="#">restaurangen</a> och alla våra faciliteter kan du njuta av en bekymmersfri och exklusiv golfvistelse hos oss!
-                </p>
-            </div>
+                <div class="facilitet1">
+                    <img src="/bilder/bastu.jpg" class="bild-fac" alt="Bild på våra mysiga bastu">
+                <div class="text1">
+                    <p>
+                        För att lyxa till det yttligare för våra gäster finns en fräsch och mysig bastu till erat förfogande.
+                    </p>
+                </div>
         </div>
+    </div>
         <div class="facilitet2">
-                <img src="#" class="bild-fac" alt="Bild från ett av våra hotellrum">
+                <img src="/bilder/guest-hotel.jpg" class="bild-fac" alt="Bild från ett av våra hotellrum">
             <div class="text2">
                 <p>
                 Våra hotellrum på golfanläggningen erbjuder en perfekt kombination av komfort och lyx, där du kan vila ut efter en dag på banan. Varje rum är elegant inrett med moderna bekvämligheter och har en fantastisk utsikt över den vackra golfbanan eller den rofyllda naturen. Här kan du njuta av sköna sängar, fräscha badrum och allt du behöver för en avslappnande vistelse. Med gångavstånd till klubbhuset och restaurangen är våra hotellrum det självklara valet för dig som vill ha en exklusiv och bekväm golfupplevelse med allt inom räckhåll.
@@ -171,15 +172,7 @@
                     </p>
                 </div>
         </div>
-        <div class="facilitet1">
-                    <img src="/bilder/bastu.jpg" class="bild-fac" alt="Bild på våra mysiga bastu">
-                <div class="text1">
-                    <p>
-                        För att lyxa till det yttligare för våra gäster finns en fräsch och mysig bastu till erat förfogande.
-                    </p>
-                </div>
-        </div>
-    </div>
+
 
 
     <footer>
