--- a/kod-html/Omoss/faciliteter.html
+++ b/kod-html/Omoss/faciliteter.html
@@ -93,7 +93,7 @@
         </div>
     </div>
    <!-- Adinas nav del slut -->
-    <div class="background-div">
+    <div class="background-div-omoss">
         <div class="under-header">
             <ul class="meny-höger-sida-omoss">
         <li class="link-omoss"><a href="/kod-html/omoss/visiontest2.html">VÅR VISION OCH HISTORIA</a></li>
