--- a/kod-html/restaurang.html
+++ b/kod-html/restaurang.html
@@ -42,6 +42,17 @@
                 <input type="submit" value="Boka Bord">
             </form>
         </div>
+
+        <!-- Öppettider -->
+         <div class="openinghours-wrapper">
+          <div class="opening-hours">
+            <h2>Restaurangens öppettider:</h2>
+              <p>Måndag - Torsdag: kl 08 - 20</p>
+              <p>Fredag - Söndag: kl 09 - 22</p>
+          </div>
+        </div>
+
+        <!-- Menyn -->
         <section class="menu-wrapper">
             <div class="menu-content">
               <h1>Meny Tuc´s Restaurang</h1>
