--- a/kod-html/legal/legal.html
+++ b/kod-html/legal/legal.html
@@ -110,7 +110,7 @@
     <div class="intpol">
       <div>
         <h2>Integritetspolicy för TUC Golfklubb <span class="material-symbols-outlined">policy</span></h2>
-        <h2>Datum för senaste uppdatering: October 11, 2024</h2>
+        <h2>Datum för senaste uppdatering: Oktober 30, 2024</h2>
         <ol>
           <li>Vilka personuppgifter samlar vi in?
             <ul>
