--- a/kod-html/restaurang.html
+++ b/kod-html/restaurang.html
@@ -111,7 +111,7 @@
     <div class="Takeaway-och-kontakt">
  
         <div class="Takeaway">
-            <a href="meny.pdf"><img src="/bilder/hamburger-494706_1280.jpg"></a>
+            <a href="/bilder/meny-takeaway.pdf"><img src="/bilder/hamburger-494706_1280.jpg"></a>
                 <p id="kontaktaosstext"> BOKA TAKEAWAY | Telefon: +46 123 456 777</p>
  
  
