andra slash i shop-index och tabort figcaption info i produkt.html

--- a/kod-html/produkt.html
+++ b/kod-html/produkt.html
@@ -42,7 +42,7 @@
                 <div class="item_image">
                     <figure>
                         <img src="/bilder/Golfklubbor.jpg" alt="Driver" class="p-img">
-                        <figcaption>Driver</figcaption>
+                        <figcaption></figcaption>
                     </figure>
                 </div>
                 <div class="item_info">
@@ -82,7 +82,7 @@
                 <div class="item_image">
                     <figure>
                         <img src="/bilder/Golfklubbor.jpg" alt="Järnklubbor" class="p-img">
-                        <figcaption>Järnklubbor</figcaption>
+                        <figcaption></figcaption>
                     </figure>
                 </div>
                 <div class="item_info">
@@ -116,7 +116,7 @@
                 <div class="item_image">
                     <figure>
                         <img src="/bilder/Golfklubbor.jpg" alt="Wedges" class="p-img">
-                        <figcaption>Wedges</figcaption>
+                        <figcaption></figcaption>
                     </figure>
                 </div>
                 <div class="item_info">
@@ -150,7 +150,7 @@
                 <div class="item_image">
                     <figure>
                         <img src="/bilder/Golfklubbor.jpg" alt="Putters" class="p-img">
-                        <figcaption>Putters</figcaption>
+                        <figcaption></figcaption>
                     </figure>
                 </div>
                 <div class="item_info">
@@ -188,7 +188,7 @@
                 <div class="item_image">
                     <figure>
                         <img src="/bilder/Golfkläder.jpg" alt="Tröjor" class="p-img">
-                        <figcaption>Tröjor</figcaption>
+                        <figcaption></figcaption>
                     </figure>
                 </div>
                 <div class="item_info">
@@ -222,7 +222,7 @@
                 <div class="item_image">
                     <figure>
                         <img src="/bilder/Golfkläder.jpg" alt="Byxor och Shorts" class="p-img">
-                        <figcaption>Byxor och Shorts</figcaption>
+                        <figcaption></figcaption>
                     </figure>
                 </div>
                 <div class="item_info">
@@ -256,7 +256,7 @@
                 <div class="item_image">
                     <figure>
                         <img src="/bilder/Golfkläder.jpg" alt="Jackor" class="p-img">
-                        <figcaption>Jackor</figcaption>
+                        <figcaption></figcaption>
                     </figure>
                 </div>
                 <div class="item_info">
@@ -291,7 +291,7 @@
                 <div class="item_image">
                     <figure>
                         <img src="/bilder/Golfkläder.jpg" alt="Kepsar" class="p-img">
-                        <figcaption>Kepsar</figcaption>
+                        <figcaption></figcaption>
                     </figure>
                 </div>
                 <div class="item_info">
@@ -330,7 +330,7 @@
                 <div class="item_image">
                     <figure>
                         <img src="/bilder/Skor.jpg" alt="Spikade skor" class="p-img">
-                        <figcaption>Spikade skor</figcaption>
+                        <figcaption></figcaption>
                     </figure>
                 </div>
                 <div class="item_info">
@@ -365,7 +365,7 @@
                 <div class="item_image">
                     <figure>
                         <img src="/bilder/Skor.jpg" alt="Spikfria skor" class="p-img">
-                        <figcaption>Spikfria skor</figcaption>
+                        <figcaption></figcaption>
                     </figure>
                 </div>
                 <div class="item_info">
@@ -401,7 +401,7 @@
                 <div class="item_image">
                     <figure>
                         <img src="/bilder/Skor.jpg" alt="Spikfria skor" class="p-img">
-                        <figcaption>Spikfria skor</figcaption>
+                        <figcaption></figcaption>
                     </figure>
                 </div>
                 <div class="item_info">
@@ -441,7 +441,7 @@
                 <div class="item_image">
                     <figure>
                         <img src="/bilder/Golfväska.jpg" alt="Caddyväskor" class="p-img">
-                        <figcaption>Caddyväskor</figcaption>
+                        <figcaption></figcaption>
                     </figure>
                 </div>
                 <div class="item_info">
@@ -477,7 +477,7 @@
                 <div class="item_image">
                     <figure>
                         <img src="/bilder/Golfväska.jpg" alt="Bärväskor" class="p-img">
-                        <figcaption>Bärväskor</figcaption>
+                        <figcaption></figcaption>
                     </figure>
                 </div>
                 <div class="item_info">
@@ -516,7 +516,7 @@
                 <div class="item_image">
                     <figure>
                         <img src="/bilder/Tillbehör.jpg" alt="Tee" class="p-img">
-                        <figcaption>Tee</figcaption>
+                        <figcaption></figcaption>
                     </figure>
                 </div>
                 <div class="item_info">
@@ -550,7 +550,7 @@
                 <div class="item_image">
                     <figure>
                         <img src="/bilder/Tillbehör.jpg" alt="Handskar" class="p-img">
-                        <figcaption>Handskar</figcaption>
+                        <figcaption></figcaption>
                     </figure>
                 </div>
                 <div class="item_info">
@@ -586,7 +586,7 @@
                 <div class="item_image">
                     <figure>
                         <img src="/bilder/Tillbehör.jpg" alt="Paraplyer" class="p-img">
-                        <figcaption>Paraplyer</figcaption>
+                        <figcaption></figcaption>
                     </figure>
                 </div>
                 <div class="item_info">
@@ -621,14 +621,14 @@
                 <div class="item_image">
                     <figure>
                         <img src="/bilder/Tillbehör.jpg" alt="Golfhanddukar" class="p-img">
-                        <figcaption>Golfhanddukar</figcaption>
+                        <figcaption></figcaption>
                     </figure>
                 </div>
                 <div class="item_info">
                     <h3>Golfhanddukar</h3>
                     <p>Håller klubbor och bollar rena, ofta med upphängningsöglor.</p>
                     <ul>
-                        <li>Fuktabsorberande material för rengöring av klubbor och bollar.</li>
+                        <li>Fuktabsorberande material för rengöring av klubbor och bollar</li>
                     </ul>
 
                     <p class="text_right">Pris: 200kr </p>
@@ -659,14 +659,15 @@
                 <div class="item_image">
                     <figure>
                         <img src="/bilder/Bollar.jpg" alt="Bollar" class="p-img">
-                        <figcaption>Bollar</figcaption>
+                        <figcaption></figcaption>
                     </figure>
                 </div>
                 <div class="item_info">
                     <h3>Bollar</h3>
                     <p>Olika egenskaper (hårdhet, material) för specifika spelsituationer, som att slå från tee eller putta.</p>
                     <ul>
-                        <li></li>
+                        <li>Kompression: 40-90</li>
+                        <li>Egenskaper: Bra avstånd och kontroll. Designad för att ge mer spinn på korta slag, passar både medel- och avancerade spelare.</li>
                     </ul>
 
                     <p class="text_right">Pris: 400kr </p>
@@ -698,7 +699,7 @@
                 <div class="item_image">
                     <figure>
                         <img src="/bilder/Träningsutrustning.jpg" alt="Puttingmattor" class="p-img">
-                        <figcaption>Puttingmattor</figcaption>
+                        <figcaption></figcaption>
                     </figure>
                 </div>
                 <div class="item_info">
@@ -732,7 +733,7 @@
                 <div class="item_image">
                     <figure>
                         <img src="/bilder/Träningsutrustning.jpg" alt="Träningsredskap" class="p-img">
-                        <figcaption>Träningsredskap</figcaption>
+                        <figcaption></figcaption>
                     </figure>
                 </div>
                 <div class="item_info">
@@ -771,7 +772,7 @@
                 <div class="item_image">
                     <figure>
                         <img src="/bilder/Elektronik.jpg" alt="GPS-enheter" class="p-img">
-                        <figcaption>GPS-enheter</figcaption>
+                        <figcaption></figcaption>
                     </figure>
                 </div>
                 <div class="item_info">
@@ -806,7 +807,7 @@
                 <div class="item_image">
                     <figure>
                         <img src="/bilder/Elektronik.jpg" alt="Avståndsmätare" class="p-img">
-                        <figcaption>Avståndsmätare</figcaption>
+                        <figcaption></figcaption>
                     </figure>
                 </div>
                 <div class="item_info">
@@ -841,7 +842,7 @@
                 <div class="item_image">
                     <figure>
                         <img src="/bilder/Elektronik.jpg" alt="Appar" class="p-img">
-                        <figcaption>Appar</figcaption>
+                        <figcaption></figcaption>
                     </figure>
                 </div>
                 <div class="item_info">
