--- a/kod-html/shop-index.html
+++ b/kod-html/shop-index.html
@@ -5,7 +5,7 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>Online Golf Shop</title>
-      <link rel="stylesheet" href="\kod-css\shop-index.css">
+      <link rel="stylesheet" href="/kod-css/shop-index.css">
     </head>
 
 
