--- a/kod-html/Omoss/omoss.html
+++ b/kod-html/Omoss/omoss.html
@@ -108,10 +108,10 @@ som ger både nöje och utmaning för alla nivåer.<br>
 <br>
 Hos oss är din bekvämlighet i fokus. Vi erbjuder gott om parkeringsmöjligheter,<br>
 inklusive platser för husbilar, så att du kan njuta av din vistelse utan stress.<br><br>
-Våra moderna <a href="/kod-html/omoss/faciliteter.html">faciliteter</a> inkluderar rymliga omklädningsrum, duschar och en <a href="/kod-html/restaurang/restaurang.html">restaurang</a> där du kan njuta av en god måltid efter rundan. <br>
+Våra moderna <a href="/kod-html/omoss/faciliteter.html">faciliteter</a> inkluderar rymliga omklädningsrum, duschar och en <a href="/kod-html/restaurang.html">restaurang</a> där du kan njuta av en god måltid efter rundan. <br>
 För dig som vill förlänga vistelsen erbjuder vi även <a href="/kod-html/omoss/faciliteter.html">övernattningsmöjligheter</a> i våra bekväma stugor.<br>
 <br>
-Som <a href="/kod-html/medlem/medlem.html"> medlem </a> i TUC Golfklubb får du tillgång till exklusiva förmåner, som rabatterade greenfee, förtur till <a href="#">bokning</a> av starttider och inbjudningar till klubbens <a href="#">tävlingar</a> och sociala evenemang. <br>
+Som <a href="/kod-html/medlem/medlem.html"> medlem </a> i TUC Golfklubb får du tillgång till exklusiva förmåner, som rabatterade greenfee, förtur till <a href="/kod-html/medlem/bokning.html">bokning</a> av starttider och inbjudningar till klubbens <a href="/kod-html/spela-golf/tavlingar-evenemang/tavlingar-evenemang.html">tävlingar</a> och sociala evenemang. <br>
 Vår vänliga personal och engagerade medlemmar ser till att du alltid känner dig välkommen, oavsett om du besöker oss för en dag eller är här året om.<br>
 <br>
 
