--- a/kod-html/spela-golf/tavlingar-evenemang/anmalan.html
+++ b/kod-html/spela-golf/tavlingar-evenemang/anmalan.html
@@ -9,10 +9,10 @@
     <link rel="stylesheet" href="/kod-css/tavlingar-evenemang.css">
 </head>
 <body>
-   <!-- Adinas nav del -->
+     <!-- Adinas nav del -->
 
 
-    <div class="top-nav">
+     <div class="top-nav">
         <ul class="menu">
             <li><a href="/kod-html/hem/index.html">Hem</a></li>
 
@@ -41,6 +41,7 @@
                     <li><a href="/kod-html/medlem/createnewmember.html">Bli medlem</a></li>
                     <li><a href="/kod-html/medlem/medlem.html">Förmåner</a></li>
                     <li><a href="/kod-html/medlem/bokning.html">Bokning</a></li>
+
 
                 </ul>
             </li>
@@ -104,7 +105,7 @@
     <div class="row">
         <div class="side">
             <div class="tavdropdown">
-                <button class="tavdropbtn">Meny</button>
+                <button class="tavdropbtn">MENY</button>
                 <div class="tavdropdown-content">
                     <a href="/kod-html/spela-golf/tavlingar-evenemang/tavlingar-evenemang.html">Tävlingar och Evenemang</a>
                     <a href="/kod-html/spela-golf/tavlingar-evenemang/kalender.html">Kalendar</a>
