--- a/kod-html/medlem/medlem.html
+++ b/kod-html/medlem/medlem.html
@@ -176,14 +176,19 @@
 
         <hr class="line">
 
-        <div class="footer-container-legal">
-            <div class="footer-cookies">
-                <p><a href="legal.html">Kakor</a> &VerticalLine; <a href="legal.html">Integritetspolicy</a></p>
-            </div>
-            <div class="footer-copyright">
-                <p>Copyright &copy; 2024</p>
-            </div>
-        </div>
+          <!--Start of Geneskod Upphövsrätt-->
+          <hr class="line">
+          <div class="footer-container-legal">
+              <div class="footer-cookies">
+                  <p><a href="/kod-html/legal/legal.html">Kakor</a> &VerticalLine;
+                      <a href="/kod-html/legal/legal.html">Integritetspolicy</a>
+                  </p>
+              </div>
+              <div class="footer-copyright">
+                  <p><a href="/kod-html/legal/legal.html">Copyright &copy; 2004-2024</a></p>
+              </div>
+          </div>
+          <!--End of Geneskod Upphövsrätt-->
     </footer>
 </body>
 </html>
