--- a/kod-html/Omoss/faciliteter.html
+++ b/kod-html/Omoss/faciliteter.html
@@ -95,7 +95,7 @@
     <div class="background-div-omoss">
         <div class="under-header">
             <ul class="meny-höger-sida-omoss">
-        <li class="link-omoss"><a href="/kod-html/omoss/visiontest2.html">VÅR VISION OCH HISTORIA</a></li>
+         <li class="link-omoss"><a href="/kod-html/omoss/visiontest2.html">VÅR VISION OCH HISTORIA</a></li>
         <li class="link-omoss"><a href="/kod-html/omoss/banorna.html">BANORNA</a></li>
         <li class="link-omoss"><a href="/kod-html/omoss/faciliteter.html">FACILITETER</a></li>
     </ul>
@@ -145,7 +145,6 @@
                     </p>
                 </div>
         </div>
-    </div>
         <div class="facilitet2">
                 <img src="/bilder/guest-hotel.jpg" class="bild-fac" alt="Bild från ett av våra hotellrum">
             <div class="text2">
@@ -170,11 +169,11 @@
                     Vår inomhus golf-ranch erbjuder den perfekta träningsmiljön för golfare året runt, oavsett väder. Här kan du slå dina slag på högteknologiska simulatorer som återskapar känslan av att spela på världens mest berömda banor. Med bekväma träningsförhållanden, realistiska projektionsskärmar och slagmattor får du möjligheten att finjustera din teknik eller bara njuta av en runda, när du vill. Perfekt för både nybörjare och erfarna spelare som vill utvecklas i en modern och avkopplande miljö.
                     </p>
                 </div>
-        </div>
+        </div> 
 
 
 
-    <footer>
+    <footer id="facili">
         <div class="footer-container">
             
             <div class="footer-logo">
