länk till copyright

--- a/kod-html/legal/legal.html
+++ b/kod-html/legal/legal.html
@@ -109,7 +109,7 @@
       <div>
         <h2>Integritetspolicy för TUC Golfklubb <span class="material-symbols-outlined">policy</span></h2>
         <h2>Datum för senaste uppdatering: Oktober 30, 2024</h2>
-        <ol>
+        <ol class="ollink">
           <li>Vilka personuppgifter samlar vi in?
             <ul>
               <li>Vi kan samla in följande typer av personuppgifter:
@@ -169,7 +169,7 @@
           </li>
 
           <li>Kontakta oss om du har frågor om vår integritetspolicy eller önskar utöva dina rättigheter, vänligen
-            kontakta oss på <a href="/kod-html/kontakt/kontakt.html">Kontakt</a>.</li>
+            kontakta oss på<a href="/kod-html/kontakt/kontakt.html">Kontakt</a>.</li>
         </ol>
       </div>
 
@@ -228,9 +228,8 @@
       </form>
     </div>
 
-    <div>
-      <h4><mark>För mer information om hur vi använder cookies, vänligen se vår <a
-            href="legal.html">Integritetspolicy</a></mark></h4>
+    <div class="h4link">
+      <h4><mark>För mer information om hur vi använder cookies, vänligen se vår<a href="legal.html">Integritetspolicy</a></mark></h4>
     </div>
 
 
