--- a/kod-html/medlem/bokning.html
+++ b/kod-html/medlem/bokning.html
@@ -95,7 +95,7 @@
    <!-- Adinas nav del slut -->
 
     <header>
-        <img src="/bilder/medlem-bokning-header.jpg" class="header-medlem">
+        <img src="/bilder/medlem-bokning-header.jpg" alt="Golf green" class="header-medlem">
     </header>
 
     <div class="container-form-aside">
@@ -133,10 +133,8 @@
     </aside>
     </div>
 
-
-    <h2 class="table-title">Lediga golftider</h2>
-
     <section class="booking-table">
+        <h2 class="table-title">Lediga golftider</h2>
         <table class="booking-calendar">
             <thead>
                 <tr>
