--- a/kod-html/hem/Index.html
+++ b/kod-html/hem/Index.html
@@ -101,7 +101,7 @@
         </video>
         <div class="title-content">
             <div class="title">Välkommen till <br> TUC Golfklubb</div>
-            <div class="info">För mer information om klubben, klicka <a href=""><b>här</b></a></div>
+            <div class="info">För mer information om klubben, klicka <a href="/kod-html/Omoss/omoss.html"><b>här</b></a></div>
         </div>
     </div>
 <!--Härifrån börjar Emilias kod (nyhetsdelen på startsidan)-->
