--- a/kod-html/restaurang.html
+++ b/kod-html/restaurang.html
@@ -11,12 +11,12 @@
     <header>
         <div class="NY-RESTURANG-HEADER-TEST">
             <div class="header2">
-                <img src="/bilder/eat-312431_1280.webp">
+                <img src="/bilder/eat-312431_1280.webp" alt="tecknade bestick med grön bakgrund">
             </div>
         <div class="header">
-            <img src="/bilder/letter-146014_1280.webp">
-            <img src="/bilder/letter-146015_1280.webp">
-            <img src="/bilder/letter-146042_1280.webp">
+            <img src="/bilder/letter-146014_1280.webp" alt="bokstaven T">
+            <img src="/bilder/letter-146015_1280.webp" alt="bokstaven U">
+            <img src="/bilder/letter-146042_1280.webp" alt="bokstaven C">
         </div>
  
  
@@ -43,14 +43,6 @@
             </form>
         </div>
 
-        <!-- Öppettider -->
-         <div class="openinghours-wrapper">
-          <div class="opening-hours">
-            <h2>Restaurangens öppettider:</h2>
-              <p>Måndag - Torsdag: kl 08 - 20</p>
-              <p>Fredag - Söndag: kl 09 - 22</p>
-          </div>
-        </div>
 
         <!-- Menyn -->
         <section class="menu-wrapper">
@@ -107,18 +99,26 @@
             </div>
         </section>
    
- 
+         <!-- Öppettider -->
+         <div class="openinghours-wrapper">
+          <div class="opening-hours">
+            <h2>Restaurangens öppettider:</h2>
+              <p>Måndag - Torsdag: kl 08 - 20</p>
+              <p>Fredag - Söndag: kl 09 - 22</p>
+          </div>
+        </div>
+       
     <div class="Takeaway-och-kontakt">
  
         <div class="Takeaway">
-            <a href="/bilder/meny-takeaway.pdf"><img src="/bilder/hamburger-494706_1280.jpg"></a>
-                <p id="kontaktaosstext"> BOKA TAKEAWAY | Telefon: +46 123 456 777</p>
+            <a href="/bilder/meny-takeaway.pdf"><img src="/bilder/hamburger-494706_1280.jpg" alt="Bild på hamburgare"></a>
+                <p class="kontaktaosstext"> BOKA TAKEAWAY | Telefon: +46 123 456 777</p>
  
  
         </div>
         <div class="Kontakt">
-            <a href="/kod-html/kontakt/kontakt.html"><img src="/bilder/contact-us-2993109_1280.jpg"> </a>
-            <p id="kontaktaosstext"> KONTAKTA OSS | RESTAURANG TUC | Telefon: +46 123 456 777 </p>
+            <a href="/kod-html/kontakt/kontakt.html"><img src="/bilder/contact-us-2993109_1280.jpg" alt="hand som pekar på kontaktalternativ"> </a>
+            <p class="kontaktaosstext"> KONTAKTA OSS | RESTAURANG TUC | Telefon: +46 123 456 777 </p>
         </div>
     </div>
 </div>
